@@ -16,6 +16,7 @@ Makefile.PL
 MANIFEST
 t/00-warning.t
 t/basic.t
+t/db_cache.t
 t/informix.t
 t/lib/My/DB.pm
 t/lib/My/FixUp.pm
